1.0.6: Optimizations and bulk update support.